feat: completed the UI for home page

--- a/src/web/html/home.html
+++ b/src/web/html/home.html
@@ -15,5 +15,18 @@
       <div class="navButtons"><i class="fa-solid fa-right-from-bracket settingsIcon" id="logoutIcon"></i></div>
    </div>
    <div class="line"></div>
+   <div class="classContainer">
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes"></div>
+      <div class="classes" id="addClass">
+         <div class="plusV"></div>
+         <div class="plusH"></div>
+      </div>
+   </div>
 </body>
 </html>
