chore: add html css file for landing page

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" type="text/css" href="../css/landingpage.css" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
 </head>
 <body>
-    
+        <div class="two">
+            <img src="../images/left_pick.png" >
+        </div>
+        <div class="one">
+            <h2>HTML ins Tag</h2>
+            <button type="button" class="btn btn-outline-success">Get Started</button>
+        </div>
 </body>
 </html>
