chore:adding html and css file for landing page

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -10,12 +10,15 @@
 
 </head>
 <body>
-        <div class="two">
-            <img src="../images/left_pick.png" >
+        <div class="row">
+        <div class="first-column">
+            <img src="../images/left_pick1.png">
         </div>
-        <div class="one">
-            <h2>HTML ins Tag</h2>
-            <button type="button" class="btn btn-outline-success">Get Started</button>
+        <div class="second-column">
+            <h1 class="hhead">Your one step solution to programming solutions</h1>
+            <h1 class="sub">Assign.Submit.Evaluate</h1>
+            <button type="button" class="btn">Get Started</button> 
         </div>
+        </div> 
 </body>
 </html>
