style: changed the style for elements

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="../css/landingpage.css" />
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
 </head>
 <body>
-        <div class="row">
-        <div class="first-column">
-            <img src="../images/left_pick1.png">
+    <div class="container">
+        <div class="div1">
+            <img src="../image/logo.png" class="logo">
         </div>
-        <div class="second-column">
-            <h1 class="hhead">Your one step solution to programming solutions</h1>
-            <h1 class="sub">Assign.Submit.Evaluate</h1>
-            <button type="button" class="btn">Get Started</button> 
+        <div class="div2">
+            <h1 class="head1">Your easy one step solution to programming submissions</h1>
+            <h1 class="sub">Assign. Submit. Evaluate</h1><br>
+            <button class="btn">Get Started</button> 
         </div>
-        </div> 
+    </div>
 </body>
 </html>
