--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -14,7 +14,7 @@
             <img src="../image/logo.png" class="logo">
         </div>
         <div class="div2">
-            <h1 class="head1">Your easy one step solution to programming submissions</h1>
+            <h1 class="head1">Your easy one step solution to programming submissions</h1><br>
             <h1 class="sub">Assign. Submit. Evaluate</h1><br>
             <button class="btn">Get Started</button> 
         </div>
