fix: for modified data type of response

--- a/src/web/html/run.html
+++ b/src/web/html/run.html
@@ -192,9 +192,9 @@
                             const resultArea = document.getElementById("result");
                             const stats = document.createElement('p');
                             stats.id = 'stats';
-                            stats.innerText = `memory used = ${data[0].memoryUsed}KB, time taken = ${data[0].timeTaken}s`;
+                            stats.innerText = `memory used = ${data[0].memoryUsedKB}KB, time taken = ${data[0].timeTakenMilliSeconds}s`;
                             const textarea = document.createElement('textarea');
-                            textarea.innerText = data.resultMessage;
+                            textarea.innerText = data[0].resultMessage;
                             textarea.diabled = true;
                             while (resultArea.firstChild) {
                                 resultArea.removeChild(resultArea.firstChild);
