--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" type="text/css" href="../css/landingpage.css" />
+    <title>AssignExpert</title>
+    <link rel="stylesheet" type="text/css" href="../../web/css/landingpage.css" />
 
 </head>
 <body>
     <div class="container">
         <div class="div1">
-            <img src="../image/logo.png" class="logo">
+            <img src="../../web/image/logo.png" class="logo">
         </div>
         <div class="div2">
-            <h1 class="head1">Your easy one step solution to programming submissions</h1><br>
-            <h1 class="sub">Assign. Submit. Evaluate</h1><br>
-            <button class="btn">Get Started</button> 
+            <h1 class="head1">Your easy one step solution to programming submissions.</h1><br>
+            <h1 class="sub">Assign. Submit. Evaluate.</h1><br>
+            <a class="btn" href="/home">Get Started.</a> 
         </div>
     </div>
 </body>
