--- a/src/web/html/class.html
+++ b/src/web/html/class.html
@@ -6,9 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
    <title>Class</title>
-   <link rel="stylesheet" type="text/css" href="../css/class.css" />
-   <link rel="stylesheet" type="text/css" href="../css/home.css" />
-   <script defer src="../javascript/class.js"></script>
+   <link rel="stylesheet" type="text/css" href="../../web/css/class.css" />
+   <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
+   <script defer src="../../web/javascript/class.js"></script>
 </head>
 <body>
    <div class="navBar">
@@ -18,42 +18,25 @@
    </div>
    <div class="line"></div>
    <div class="miscallaneous">
-      <div class="className">Class 1</div>
-      <div class="members">Members</div>
+      <div class="className"><%= oneClass.name %></div>
    </div>
-   <div class="assigned" onclick="showAssigned()">
-      Assigned&nbsp;&nbsp;<i class="fa-solid fa-caret-right arrowDown" id="arrow"></i>
-   </div>
+   <p class="heading">Assignments</p>
    <div class="assignedContainer">
-      <div class="assignments">
-         <div class="assignmentName">Assignment 1</div>
-         <div class="difficultyLevel">Difficulty Level: Hard</div>
-      </div>
-      <div class="assignments">
-         <div class="assignmentName">Assignment 2</div>
-         <div class="difficultyLevel">Difficulty Level: Medium</div>
-      </div>
-      <div class="assignments">
-         <div class="assignmentName">Assignment 3</div>
-         <div class="difficultyLevel">Difficulty Level: Easy</div>
-      </div>
+      <% for (let i = 0; i < assignments.length; ++i) { %>
+         <div class="assignments">
+            <div class="assignmentName"><%= assignments[i].title %></div>
+            <div class="difficultyLevel">Difficulty Level: <%= assignments[i].difficultyLevel %></div>
+         </div>
+      <% } %>
    </div>
-   <div class="assigned" onclick="showCompleted()">
-      Completed&nbsp;&nbsp;<i class="fa-solid fa-caret-right arrowDown" id="arrowC"></i>
-   </div>
-   <div class="assignedContainer" id="completedContainer">
-      <div class="assignments">
-         <div class="assignmentName">Assignment 1</div>
-         <div class="difficultyLevel">Difficulty Level: Hard</div>
-      </div>
-      <div class="assignments">
-         <div class="assignmentName">Assignment 2</div>
-         <div class="difficultyLevel">Difficulty Level: Medium</div>
-      </div>
-      <div class="assignments">
-         <div class="assignmentName">Assignment 3</div>
-         <div class="difficultyLevel">Difficulty Level: Easy</div>
-      </div>
+   <p class="heading">Members</p>
+      <% for (let i = 0; i < members.length; ++i) { %>
+         <p class="membersList"><%= members[i] %></p>
+      <% } %>
+   
+   <div id="updateSection">
+      <input type="text" placeholder="update class name">
+      <button type="submit">update</button>
    </div>
 </body>
 </html>
