--- a/src/web/html/updateAssignment.html
+++ b/src/web/html/updateAssignment.html
@@ -6,9 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
    <title>Assignment</title>
-   <link rel="stylesheet" type="text/css" href="../css/assignment.css" />
-   <link rel="stylesheet" type="text/css" href="../css/home.css" />
-   <script defer src="../javascript/upsertFaculty.js"></script>
+   <link rel="stylesheet" type="text/css" href="../../web/css/assignment.css" />
+   <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
+   <script defer src="../../web/javascript/upsertAssignment.js"></script>
 </head>
 <body>
    <div class="navBar">
