--- a/src/web/html/class.html
+++ b/src/web/html/class.html
@@ -35,8 +35,8 @@
       <% } %>
    
    <div id="updateSection">
-      <input type="text" placeholder="update class name">
-      <button type="submit">update</button>
+      <input type="text" placeholder="update class name" id="updateInput">
+      <button type="submit" onclick="updateName()">update</button>
    </div>
 </body>
 </html>
