fix: issues in viewing assignment for faculty

--- a/src/web/html/viewAssignment.html
+++ b/src/web/html/viewAssignment.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
-   <title>Assignment</title>
+   <title>Assignment- View</title>
    <link rel="stylesheet" type="text/css" href="../../web/css/assignment.css" />
    <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
    <script defer src="../../web/javascript/viewAssignment.js"></script>
@@ -27,25 +27,20 @@
    <h3 class="miniHeadings" id="problemHeading">Problem</h3>
    <div class="problem" id="problem">
       <div class="problemData" id="description">
-         There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea. There once was ship that sailed to sea.
       </div><br><br>
       <h4>Sample Input:</h4><br>
       <div class="problemData" id="sampleInput">
-         Boundary is the input
       </div><br><br>
       <h4>Sample Output:</h4><br>
       <div class="problemData" id="sampleOutput">
-         Area is the output
       </div><br><br>
       <h4>Constraints:</h4><br>
       <div class="problemData" id="constraints">
-         Perimeter is the constraint
       </div><br><br>
       <h4 style="display: inline-block;">Time Limit: </h4>
       <div class="problemData" id="timeLimit" style="display: inline-block; width: fit-content;">10s</div><br><br>
       <h4 style="display: inline-block;">Memory Limit: </h4>
       <div class="problemData" id="memoryLimit" style="display: inline-block; width: fit-content;">1 GB</div>
    </div><br><br>
-   <button class="submitButton" onclick="createAssignment()"><i class="fa-solid fa-file-circle-plus"></i>&nbsp;&nbsp;Create</button>
 </body>
 </html>
