--- a/src/web/html/updateAssignment.html
+++ b/src/web/html/updateAssignment.html
@@ -5,10 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
-   <title>Assignment</title>
+   <title>Assignment - Edit</title>
    <link rel="stylesheet" type="text/css" href="../../web/css/assignment.css" />
    <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
-   <script defer src="../../web/javascript/upsertAssignment.js"></script>
+   <script defer src="../../web/javascript/updateAssignment.js"></script>
 </head>
 <body>
    <div class="navBar">
