--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AssignExpert</title>
     <link rel="stylesheet" type="text/css" href="../../web/css/landingpage.css" />
+    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -16,7 +17,7 @@
         <div class="div2">
             <h1 class="head1">Your easy one step solution to programming submissions.</h1><br>
             <h1 class="sub">Assign. Submit. Evaluate.</h1><br>
-            <a class="btn" href="/home">Get Started.</a> 
+            <a class="btn" href="/home">Get Started &nbsp;<i class="fa-solid fa-rocket"></i></a> 
         </div>
     </div>
 </body>
