style: modified class page UI

--- a/src/web/html/class.html
+++ b/src/web/html/class.html
@@ -23,11 +23,20 @@
    <p class="heading">Assignments</p>
    <div class="assignedContainer">
       <% for (let i = 0; i < assignments.length; ++i) { %>
-         <a class="assignments" href="/assignment/<%= assignments[i].id %>/view">
-            <div class="assignmentName"><%= assignments[i].title %></div>
-            <div class="difficultyLevel">Difficulty Level: <%= assignments[i].difficultyLevel %></div>
-         </a>
-         <a href="/assignment/<%= assignments[i].id %>/edit">Edit Assignment</a>
+         <div class="assignmentContainer">
+            <a class="assignments" href="/assignment/<%= assignments[i].id %>/view">
+               <div class="assignmentName"><%= assignments[i].title %></div>
+               <div class="difficultyLevel">Difficulty Level: <%= assignments[i].difficultyLevel %></div>
+            </a>
+            <a href="/assignment/<%= assignments[i].id %>/edit" class="editAssignment"><i class="fa-solid fa-file-pen"></i></a>
+         </div>
+         <div class="assignmentContainer">
+            <a class="assignments" href="/assignment/<%= assignments[i].id %>/view">
+               <div class="assignmentName"><%= assignments[i].title %></div>
+               <div class="difficultyLevel">Difficulty Level: <%= assignments[i].difficultyLevel %></div>
+            </a>
+            <a href="/assignment/<%= assignments[i].id %>/edit" class="editAssignment"><i class="fa-solid fa-file-pen"></i></a>
+         </div>
       <% } %>
    </div>
    <p class="heading">Members</p>
