bug: solved issue of difficulty level not showing

--- a/src/web/html/viewAssignment.html
+++ b/src/web/html/viewAssignment.html
@@ -20,7 +20,7 @@
    <div class="line"></div>
 
    <div class="assignmentTitle" id="assignmentTitle">
-      Assignment 1&nbsp;<sup style="color: white; background-color: rgb(204, 222, 10); padding: 0.15vh 0.2vw; border-radius: 4px; font-size: 2vh; font-weight: 700;" id="difficulty">EASY</sup>
+      &nbsp;<sup style="color: white; background-color: rgb(204, 222, 10); padding: 0.15vh 0.2vw; border-radius: 4px; font-size: 2vh; font-weight: 700;" id="difficulty">EASY</sup>
    </div>
    <div id="score">10 points</div>
 
