feat: made navbar functional

--- a/src/web/html/submissions.html
+++ b/src/web/html/submissions.html
@@ -9,12 +9,13 @@
    <link rel="stylesheet" type="text/css" href="../../web/css/submissions.css" />
    <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
    <script defer src="../../web/javascript/submissions.js"></script>
+   <script defer src="../../web/javascript/navBar.js"></script>
 </head>
 <body>
    <div class="navBar">
-      <div class="title">AssignExpert</div>
-      <div class="navButtons"><i class="fa-solid fa-gear settingsIcon"></i></div>
-      <div class="navButtons"><i class="fa-solid fa-right-from-bracket settingsIcon" id="logoutIcon"></i></div>
+      <div class="title" onclick="gotoHomePage()">AssignExpert</div>
+      <div class="navButtons" onclick="gotoSettingPage()"><i class="fa-solid fa-gear settingsIcon"></i></div>
+      <div class="navButtons" onclick="logout()"><i class="fa-solid fa-right-from-bracket settingsIcon" id="logoutIcon"></i></div>
    </div>
    <div class="line"></div>
    <h1 class="assignmentName">Assignment 1</h1>
