fix: no solution box for faculty

--- a/src/web/html/viewAssignment.html
+++ b/src/web/html/viewAssignment.html
@@ -45,7 +45,7 @@
       <div class="problemData" id="memoryLimit" style="display: inline-block; width: fit-content;">1 GB</div>
    </div><br><br>
 
-   <div id="solution">
+   <div id="solution" style="display: none;">
       <h3 class="miniHeadings" id="problemHeading">Solution</h3>
       <div id="prefs">
          <label for="language">Language: </label>
