feat: created loading page, added animation to landing page

--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="div2">
             <h1 class="head1">Your easy one step solution to programming submissions.</h1><br>
-            <h1 class="sub">Assign. Submit. Evaluate.</h1><br>
+            <h1 class="sub motoAnimate">Assign. &nbsp;&nbsp;Submit. &nbsp;&nbsp;Evaluate.</h1><br>
             <a class="btn" href="/home">Get Started &nbsp;<i class="fa-solid fa-rocket"></i></a> 
         </div>
     </div>
