fix: consistent titles in all html pages

--- a/src/web/html/auth.html
+++ b/src/web/html/auth.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
-   <title>Authentication Page</title>
+   <title>Auth - AssignExpert</title>
    <link rel="stylesheet" type="text/css" href="../../web/css/auth.css" />
    <script defer src="../../web/javascript/signUp.js"></script>
    <script defer src="../../web/javascript/signIn.js"></script>
