--- a/src/web/html/run.html
+++ b/src/web/html/run.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AssignExpert - run</title>
+    <title>Run - AssignExpert</title>
     <script src="/web/ace-editor/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
     <style type="text/css" media="screen">
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
