--- a/src/web/html/settings.html
+++ b/src/web/html/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
-    <title>Settings</title>
+    <title>Settings - AssignExpert</title>
     <link rel="stylesheet" href="../../web/css/settings.css" type="text/css">
 </head>
 <body>
