--- a/src/web/html/class.html
+++ b/src/web/html/class.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
-   <title>Class</title>
+   <title>Class - AssignExpert</title>
    <link rel="stylesheet" type="text/css" href="../../web/css/class.css" />
    <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
    <script defer src="../../web/javascript/class.js"></script>
