--- a/src/web/html/submission.html
+++ b/src/web/html/submission.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Submission</title>
+    <title>Submission - AssignExpert</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
     <script defer src="../../web/javascript/navBar.js"></script>
