fix: create assignment bug fixed

--- a/src/web/html/insertAssignment.html
+++ b/src/web/html/insertAssignment.html
@@ -158,13 +158,13 @@
    <div class="testCasesContainer" id="testCasesContainer">
       <div class="testCaseContainer" id="firstContainer">
          <h4>Input: </h4>
-         <textarea class="inputOutput"></textarea>
+         <textarea class="inputOutput testCaseInput"></textarea>
          <br><br>
          <h4>Output: </h4>
-         <textarea class="inputOutput"></textarea>
+         <textarea class="inputOutput testCaseOutput"></textarea>
          <br>
          <h4 style="display: inline-block;">Points: </h4>
-         <input class="smallInput" style="width: 9vw; margin-left: 1vw;" type="text" autocomplete="off" placeholder="Enter Points">
+         <input class="smallInput testCasePoints" style="width: 9vw; margin-left: 1vw;" type="text" autocomplete="off" placeholder="Enter Points">
       </div>
    </div>
    <div class="addCaseContainer">
