feat: view submissions

--- a/src/web/html/viewAssignment.html
+++ b/src/web/html/viewAssignment.html
@@ -25,6 +25,7 @@
       &nbsp;<sup style="color: white; background-color: rgb(204, 222, 10); padding: 0.15vh 0.2vw; border-radius: 4px; font-size: 2vh; font-weight: 700;" id="difficulty">EASY</sup>
    </div>
    <div id="score">10 points</div>
+   <button id="viewSubmissions" onclick="viewSubmissions()">View submissions</button>
 
    <h3 class="miniHeadings" id="problemHeading">Problem</h3>
    <div class="problem" id="problem">
