feat: toggle hold or release points

--- a/src/web/html/viewAssignment.html
+++ b/src/web/html/viewAssignment.html
@@ -26,6 +26,7 @@
    </div>
    <div id="score">10 points</div>
    <button id="viewSubmissions" onclick="viewSubmissions()">View submissions</button>
+   <button id="hold-release-points" onclick="holdReleasePoints()"></button>
 
    <h3 class="miniHeadings" id="problemHeading">Problem</h3>
    <div class="problem" id="problem">
